// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should display the label on the left and the checkbox on the right 1`] = `
<label
  className="jsx-4006430834 kirk-checkbox kirk-checkbox--labelDisplay-left"
>
  <div
    className="jsx-4006430834"
  >
    <input
      checked={false}
      className="jsx-4006430834"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
    <span
      aria-hidden="true"
      className="jsx-4006430834 "
    />
  </div>
  <div
    className="jsx-4006430834"
  >
    <span
      className="jsx-4006430834 kirk-label"
    >
      Label
    </span>
    
  </div>
</label>
`;

exports[`Checkbox should not display either the label or the sublabel 1`] = `
<label
  className="jsx-4006430834 kirk-checkbox kirk-checkbox--labelDisplay-none"
>
  <div
    className="jsx-4006430834"
  >
    <input
      checked={false}
      className="jsx-4006430834"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
    <span
      aria-hidden="true"
      className="jsx-4006430834 "
    />
  </div>
  <div
    className="jsx-4006430834"
  >
    <span
      className="jsx-4006430834 kirk-label"
    >
      Label
    </span>
    
  </div>
</label>
`;
